# intraday-scalping-bot

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  main.py
bot/: scalper.py
config/: scalping_config.json
core/: backtest_main.cpp  mes_risk_main.cpp
core/backtest/: BacktestEngine.cpp  BacktestEngine.h
core/data/: OHLCVBar.h
core/risk/: RiskManager.cpp  RiskManager.h
dashboard/: server.py  state.py
dashboard/static/: index.html
data/: bot_state_paper.json  scalping_performance_paper.csv
docs/: backtest_results.md  ib_gateway_setup.md  orb_explained.md
paper_trading/: ib_futures_stream.py
scripts/: analyze_data.py  check_quality.py  download_history.py  monthly_pnl.py  replay_test.py  slippage_report.py  stop_bot.py
